# cli-meetup-12

./: README.md  justfile
.github/workflows/: verify.yaml
mycli/: Cargo.toml  justfile  tests.sh
mycli/src/: ask.rs  bye.rs  commands.rs  hello.rs  main.rs
mycli_with_libs/: Cargo.toml  justfile  tests.sh
mycli_with_libs/src/: ask.rs  bye.rs  commands.rs  indicate_showcase.rs  main.rs
slides/: main.typ
