[package]
name = "mycli_with_libs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
clap-markdown = "0.1.3"
inquire = {version = "0.7.5", features = ["date"]}
indicatif = "=0.17.8"
colored = "2"
comfy-table = { version = "7.1.3", features = ["custom_styling" ,"tty"]}
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
rand = "0.9.1"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }


[[bin]]
name="myclibs"
path="src/main.rs"
